# lab3_2ndsem

./: .gitignore  CMakeLists.txt  README.md
headers/: array_sequence.hpp  dynamic_array.hpp  linked_list.hpp  list_sequence.hpp  queue.hpp  sequence.hpp  stack.hpp
monad_header/: monad_adapter.hpp
monad_template/: monad_adapter.tpp
templates/: array_sequence.tpp  dynamic_array.tpp  linked_list.tpp  list_sequence.tpp  queue.tpp  sequence.tpp  stack.tpp
tests/: linked_list.inc  main_tests.cpp  test_array_sequence.cpp  test_array_sequence.inc  test_complex.inc  test_dynamic_array.cpp  test_dynamic_array.inc  test_io_functions.inc  test_linked_list.cpp  test_linked_list.inc  test_list_sequence.cpp  test_list_sequence.inc  test_monad.cpp  test_professor.cpp  test_queue.cpp  test_stack.cpp  test_stack.inc  test_student.cpp  test_student.inc
types_headers/: complex.hpp  professor.hpp  student.hpp
types_source/: complex.cpp  student.cpp
types_sources/: professor.cpp  student.cpp
ui_headers/: io_functions.hpp  ui.hpp
ui_sources/: io_functions.cpp  lab.cpp  ui.cpp
